Add xlsx library locally

--- a/src/remote/index.html
+++ b/src/remote/index.html
@@ -170,7 +170,7 @@
         reader.readAsBinaryString(file);
       });
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+    <script src="libs/xlsx.full.min.js"></script>
     <script src="code.js"></script>
   </body>
 </html>
