--- a/public/index.html
+++ b/public/index.html
@@ -15,26 +15,32 @@
         align-items: center;
         height: 100vh;
       }
+
       .container {
-        text-align: center;
+        text-align: left;
         padding: 20px;
       }
+
       h1 {
         margin-bottom: 10px;
         font-size: 24px;
       }
+
       p {
         margin-bottom: 20px;
         font-size: 16px;
       }
+
       .file-input,
       .template-input,
       .submit-input {
         margin-bottom: 20px;
       }
+
       #upload {
         display: none;
       }
+
       .custom-file-upload,
       .custom-template-input,
       .custom-submit-button {
@@ -42,19 +48,39 @@
         padding: 10px 20px;
         cursor: pointer;
         border: 1px solid #000000;
-        border-radius: 5px;
         background-color: #ffffff;
         transition: background-color 0.3s, color 0.3s;
       }
+
+      .submit-input {
+        display: flex;
+        justify-content: center;
+      }
+
       .custom-template-input {
-        width: calc(100% - 44px); /* 100% width minus padding and border */
+        width: 100%;
         box-sizing: border-box;
+      }
+
+      .custom-submit-button {
+        background-color: #000;
+        color: #fff;
+        width: 160px;
+      }
+
+      .custom-file-upload {
+        border: 1px dashed #000000;
+        color: #cccccc;
+        padding: 64px 16px;
+        text-align: center;
+        width: calc(100% - 34px);
       }
 
       .status {
         margin-top: 20px;
         font-size: 14px;
       }
+
       .error {
         color: red;
       }
@@ -63,19 +89,21 @@
   <body>
     <div class="container">
       <h1>Campañas Pronovias</h1>
-      <p>Seleccione un archivo Excel para generar las distintas campañas</p>
+      <p>
+        Selecciona el archivo de excel con las traducciones para generar las
+        distintas versiones por idioma.
+      </p>
       <div class="template-input">
-        <label for="template-name">Nombre del template:</label>
         <input
           type="text"
           id="template-name"
-          placeholder="Introduzca el nombre del template"
+          placeholder="Introduzca el nombre del frame a copiar"
           class="custom-template-input"
         />
       </div>
       <div class="file-input">
         <label for="upload" class="custom-file-upload"
-          >Seleccionar Archivo</label
+          >Seleccionar archivo</label
         >
         <input type="file" id="upload" />
       </div>
@@ -85,7 +113,6 @@
       <div class="status" id="status"></div>
     </div>
 
-    <script src="xlsx.full.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         document
@@ -180,98 +207,6 @@
             reader.readAsBinaryString(file);
           });
       });
-    </script>
-
-    <script>
-      figma.ui.onmessage = async (msg) => {
-        if (msg.type === "create-frames") {
-          const { data, templateName } = msg;
-
-          // Buscar el frame llamado según el nombre del template proporcionado por el usuario
-          const templateFrame = figma.currentPage.findOne(
-            (node) => node.name === templateName && node.type === "FRAME"
-          );
-
-          if (!templateFrame) {
-            figma.notify(`Template frame named "${templateName}" not found`);
-            return;
-          }
-
-          // Iterar sobre cada idioma y crear un frame debajo del anterior
-          let offsetY = templateFrame.y + templateFrame.height + 50; // Espacio vertical entre frames
-
-          for (const rowData of data) {
-            const {
-              language,
-              title1,
-              title2,
-              description1,
-              description2,
-              buttonText,
-              campaign,
-            } = rowData;
-
-            // Clonar el frame "Template"
-            const newFrame = templateFrame.clone();
-            newFrame.x = templateFrame.x;
-            newFrame.y = offsetY;
-            newFrame.name = `${campaign}_${language}`; // Configurar el nombre del frame con el idioma y campaña
-
-            // Buscar y reemplazar los textos dentro del nuevo frame
-            const titleNode1 = newFrame.findOne(
-              (node) => node.name === "Title1" && node.type === "TEXT"
-            );
-            const titleNode2 = newFrame.findOne(
-              (node) => node.name === "Title2" && node.type === "TEXT"
-            );
-            const descriptionNode1 = newFrame.findOne(
-              (node) => node.name === "Description1" && node.type === "TEXT"
-            );
-            const descriptionNode2 = newFrame.findOne(
-              (node) => node.name === "Description2" && node.type === "TEXT"
-            );
-            const buttonNode = newFrame.findOne(
-              (node) => node.name === "Button" && node.type === "TEXT"
-            );
-
-            // Asignar textos a los nodos
-            if (titleNode1 && title1) {
-              await figma.loadFontAsync(titleNode1.fontName);
-              titleNode1.characters = title1;
-            }
-
-            if (titleNode2 && title2) {
-              await figma.loadFontAsync(titleNode2.fontName);
-              titleNode2.characters = title2;
-            }
-
-            if (descriptionNode1 && description1) {
-              await figma.loadFontAsync(descriptionNode1.fontName);
-              descriptionNode1.characters = description1;
-            }
-
-            if (descriptionNode2 && description2) {
-              await figma.loadFontAsync(descriptionNode2.fontName);
-              descriptionNode2.characters = description2;
-            }
-
-            if (buttonNode && buttonText) {
-              await figma.loadFontAsync(buttonNode.fontName);
-              buttonNode.characters = buttonText;
-            }
-
-            // Actualizar el offset para el siguiente frame
-            offsetY += newFrame.height + 50;
-
-            // Agregar el nuevo frame a la página actual
-            figma.currentPage.appendChild(newFrame);
-          }
-
-          // Notificar al usuario que la operación ha sido completada
-          figma.notify("Frames created successfully");
-          figma.closePlugin();
-        }
-      };
     </script>
 
     <script>
