--- a/src/ui.html
+++ b/src/ui.html
@@ -45,7 +45,7 @@
           document.write(htmlText);
           document.close();
         } catch (error) {
-          document.body.innerHTML = `<p style="color: red;">${error.message}</p>`;
+          document.body.innerHTML = `<p>Error al cargar el plugin</p>`;
         }
       }
 
