--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
     <style>
       @font-face {
         font-family: "FontMarkPro";
-        src: url("font-mark-pro.woff2") format("woff2");
+        src: url("https://bihotzstudio.github.io/figma-plugin-pronovias/font-mark-pro.woff2")
+          format("woff2");
         font-weight: normal;
         font-style: normal;
       }
 
       body {
-        font-family: "MiFuentePersonalizada", sans-serif;
+        font-family: "FontMarkPro", helvetica;
         background-color: #ffffff;
         color: #000000;
         margin: 0;
@@ -53,7 +54,7 @@
       .custom-submit-button {
         display: inline-block;
         padding: 10px 20px;
-        font-family: "FontMarkPro";
+        font-family: "FontMarkPro", helvetica;
         border: 1px solid #000000;
         background-color: #ffffff;
         transition: background-color 0.3s, color 0.3s;
