--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,7 @@
         color: red;
       }
     </style>
+    <script src="https://bihotzstudio.github.io/figma-plugin-pronovias/xlsx.min.js"></script>
   </head>
   <body>
     <div class="container">
