Añade logo bihotz studio

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="image-container">
+        <img
+          src="https://bihotzstudio.github.io/figma-plugin-pronovias/images/logo-bihotz-studio.png"
+          alt="Bihotz Studio"
+        />
+      </div>
+
       <h1>CAMPAÑAS PRONOVIAS</h1>
       <p>
         Selecciona el archivo de excel con las traducciones para generar las
